--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title> Evergreen Computing </title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
+
 <style>
+ h1 {
+  color: blue;
+  font-family: Papyrus,fantasy; 
+  text-align: center;
+}
+ 
+  p {
+  color: black;
+  font-family: FreeMono, monospace;
+  text-align: center;
+}
+ 
 </style>
+ 
 <script src=""></script>
 <body>
 
 <img src="img_la.jpg" alt="LA" style="width:100%">
 
 <div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+ <h1 id = "h1title"> Evergreen Computing </h1>
+ <p> This is the web page of evergreen computing. We connect the world of mathematics and computer science to creativity and art. </p>
 </div>
 
 </body>
